@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.2281 2004/10/30 06:24:51 minskim Exp $
+$NetBSD: TODO,v 1.2282 2004/10/30 06:31:02 minskim Exp $
 
 Suggested new packages
 ======================
@@ -305,7 +305,6 @@ Suggested package updates
 	o dillo-0.8.3
 	o dmalloc-5.3.0
 	o docbook-4.3
-	o docbook-simple-1.0CR2
 	o docsis-0.9.1
 	o dopewars-1.5.10
 	o doxygen-1.3.9.1
